[gd_scene load_steps=2 format=3 uid="uid://b37hi2a1rk5bo"]

[ext_resource type="Script" path="res://game_objects/Entities/Species/SpeciesNode.gd" id="1_6ngr7"]

[node name="SpeciesNode" type="PanelContainer"]
script = ExtResource("1_6ngr7")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="NameAndAmount" type="Label" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Name"

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "X"

[node name="HappinesLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="DetailsBox" type="VBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="DescLabel" type="Label" parent="VBoxContainer/DetailsBox"]
unique_name_in_owner = true
layout_mode = 2

[node name="HabitatLabel" type="Label" parent="VBoxContainer/DetailsBox"]
unique_name_in_owner = true
layout_mode = 2

[node name="GrowthLabel" type="Label" parent="VBoxContainer/DetailsBox"]
unique_name_in_owner = true
layout_mode = 2

[node name="ProductivityLabel" type="Label" parent="VBoxContainer/DetailsBox"]
unique_name_in_owner = true
layout_mode = 2

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button" to="." method="_on_button_pressed"]
